[project]
name = "Leistungskurve_II"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Christoph Gleinser", email = "gc0453@mci4me.at"},
    {name = "Luggi003", email = "al3320@mci4me.at"},
]
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "matplotlib>=3.10.9",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
